added content to post and jobs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link active" aria-current="page" href="signup.html">Join Now</a>
                         </li>
 
-                        <button class="violet-button">Sign In</button>
+                        <button onclick="location.href='signin.html'" class="violet-button">Sign In</button>
                 </ul>
               </div>
             </div>
@@ -54,7 +54,7 @@
                     Welcome to your Professional Community 
                 </h1>
 
-                <button style="margin-top: 60px;" class="rect-box" href="">Search For a Job 
+                <button onclick="location.href='jobs.html'" style="margin-top: 60px;" class="rect-box" href="">Search For a Job 
                     <img style="margin-left: 250px; color:#0177b6;"  src="assets/images/search-solid.svg" height="40" width="30" alt=""></button> <br>
                 <button class="rect-box" href="">Find a Person you Know 
                     <img style="margin-left: 190px;" src="assets/images/users-solid.svg" height="40" width="35" alt="">  </button> <br>
