login and signup done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link active" aria-current="page" href="signup.html">Join Now</a>
                         </li>
 
-                        <button onclick="location.href='signin.html'" class="violet-button">Sign In</button>
+                        <button onclick="location.href='signin.php'" class="violet-button">Sign In</button>
                 </ul>
               </div>
             </div>
