--- a/network.html
+++ b/network.html
@@ -34,7 +34,7 @@
                  <!-- Icons -->
 
                  <div class="icon-container">
-                     <a href="feed.html">
+                     <a href="feed.php">
                       <div style="margin-left: 300px; width:40px;  " class="icon-with-text">
                           <img  src="assets/images/home-solid.svg" height="25" width="25" alt="">
                           <p style=" width:60px; " >Home</p>
