job page dynamic db

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Welcome to your Professional Community 
                 </h1>
 
-                <button onclick="location.href='jobs.html'" style="margin-top: 60px;" class="rect-box" href="">Search For a Job 
+                <button onclick="location.href='jobs.php'" style="margin-top: 60px;" class="rect-box" href="">Search For a Job 
                     <img style="margin-left: 250px; color:#0177b6;"  src="assets/images/search-solid.svg" height="40" width="30" alt=""></button> <br>
                 <button class="rect-box" href="">Find a Person you Know 
                     <img style="margin-left: 190px;" src="assets/images/users-solid.svg" height="40" width="35" alt="">  </button> <br>
