--- a/network.html
+++ b/network.html
@@ -54,7 +54,7 @@
               </div>
 
               <div class="icon-container">
-                  <a href="jobs.html">
+                  <a href="jobs.php">
                       <div style="width: 40px;" class="icon-with-text">
                           <img src="assets/images/briefcase-solid.svg" height="25" width="25" alt="">
                           <p>Jobs</p>
